fix: change gap value
the new gap value makes the main text of the hero banner look similiar to that of the given solution photo

--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@
   background-color: #1F2937;
   display: flex;
   justify-content: space-between;
-  gap: 10%;
+  gap: 12%;
   flex-wrap: wrap-reverse;
 }
 .hero-banner .main-text { 
